--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <meta name="title" property="og:title" content="Yero Shop!" />
+    <meta name="title" property="og:title" content="Gada Electronics" />
     <meta name="type" property="og:type" content="website" />
     <meta
       name="url"
@@ -16,7 +16,7 @@
     <meta
       name="description"
       property="og:description"
-      content="¡Bienvenido a Yero Shop! Experimenta la alegría de las compras en línea sin problemas y explora el mundo de la electrónica con nosotros. Comienza a navegar por nuestra vasta colección hoy y eleva tu estilo de vida digital con nuestros productos y servicios excepcionales."
+      content="¡Bienvenido a Gada Electronics! Experimenta la alegría de las compras en línea sin problemas y explora el mundo de la electrónica con nosotros. Comienza a navegar por nuestra vasta colección hoy y eleva tu estilo de vida digital con nuestros productos y servicios excepcionales."
     />
 
     <meta
@@ -30,9 +30,9 @@
     <!-- favicon -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.svg" />
-    <link rel="icon" type="image/svg" sizes="32x32" href="/favicon-32x32.svg" />
-    <link rel="icon" type="image/svg" sizes="16x16" href="/favicon-16x16.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <!-- favicon end -->
 
@@ -44,7 +44,7 @@
       rel="stylesheet"
     />
     <!-- fonts import end -->
-    <title>Yero Shop!</title>
+    <title>Gada Electronics</title>
   </head>
   <body>
     <noscript>Necesitas habilitar JavaScript para ejecutar esta aplicación.</noscript>
