--- a/public/index.html
+++ b/public/index.html
@@ -28,11 +28,11 @@
     <meta property="og:image:height" content="800" />
 
     <!-- favicon -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.svg" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.svg" />
+    <link rel="icon" type="image/svg" sizes="32x32" href="/favicon-32x32.svg" />
+    <link rel="icon" type="image/svg" sizes="16x16" href="/favicon-16x16.svg" />
     <link rel="manifest" href="/site.webmanifest" />
     <!-- favicon end -->
 
