--- a/public/index.html
+++ b/public/index.html
@@ -36,11 +36,16 @@
     <link rel="manifest" href="/site.webmanifest" />
     <!-- favicon end -->
 
-    <!-- fonts import -->
+    <!-- Apple-style Premium Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cabin&family=Montserrat&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=SF+Pro+Display:wght@300;400;500;600;700;800;900&family=SF+Pro+Text:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Fallback fonts for better compatibility -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
     <!-- fonts import end -->
