Prevenir zoom en dispositivos móviles y tablets

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- CONFIGURACIÓN MEJORADA PARA PREVENIR ZOOM EN MÓVILES Y TABLETS -->
+    <meta 
+      name="viewport" 
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, shrink-to-fit=no, viewport-fit=cover"
+    />
     <meta name="theme-color" content="#000000" />
+
+    <!-- META TAGS ADICIONALES PARA PREVENIR ZOOM -->
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-touch-fullscreen" content="yes" />
 
     <meta name="title" property="og:title" content="Yero Shop!" />
     <meta name="type" property="og:type" content="website" />
@@ -51,5 +62,52 @@
 
     <div id="root"></div>
     <div id="modal-root"></div>
+
+    <!-- SCRIPT PARA PREVENIR ZOOM EN DISPOSITIVOS MÓVILES -->
+    <script>
+      // Prevenir zoom con gestos táctiles
+      document.addEventListener('gesturestart', function (e) {
+        e.preventDefault();
+      });
+
+      document.addEventListener('gesturechange', function (e) {
+        e.preventDefault();
+      });
+
+      document.addEventListener('gestureend', function (e) {
+        e.preventDefault();
+      });
+
+      // Prevenir zoom con doble tap
+      let lastTouchEnd = 0;
+      document.addEventListener('touchend', function (event) {
+        const now = (new Date()).getTime();
+        if (now - lastTouchEnd <= 300) {
+          event.preventDefault();
+        }
+        lastTouchEnd = now;
+      }, false);
+
+      // Prevenir zoom con rueda del mouse en dispositivos táctiles
+      document.addEventListener('wheel', function(e) {
+        if (e.ctrlKey) {
+          e.preventDefault();
+        }
+      }, { passive: false });
+
+      // Prevenir zoom con teclado
+      document.addEventListener('keydown', function(e) {
+        if ((e.ctrlKey || e.metaKey) && (e.keyCode === 61 || e.keyCode === 107 || e.keyCode === 173 || e.keyCode === 109 || e.keyCode === 187 || e.keyCode === 189)) {
+          e.preventDefault();
+        }
+      });
+
+      // Función adicional para iOS Safari
+      document.addEventListener('touchmove', function(event) {
+        if (event.scale !== 1) {
+          event.preventDefault();
+        }
+      }, { passive: false });
+    </script>
   </body>
 </html>
